<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#FFD5EA"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/film_name_field"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#FF0099"
            android:textColorHint="#FFAAD5"
            android:hint="@string/title_movie_name"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            tools:ignore="LabelFor">
        </EditText>
        <Button
            android:id="@+id/search_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/icon_search"
            android:contentDescription="@string/search_button"/>
    </LinearLayout>
    <EditText
        android:id="@+id/film_year_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#FF0099"
        android:textColorHint="#FFAAD5"
        android:hint="@string/title_movie_year"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        tools:ignore="LabelFor">
    </EditText>
    <ImageView
        android:id="@+id/photo_drawable"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/movie_poster"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"/>
    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="#FFAAD5"
        android:textColor="#FF0099"
        android:text="@string/add_movie"
        />
</LinearLayout>