<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFAAD5" >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <ImageView
            android:id="@+id/choose_poster"
            android:layout_width="50dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/choose_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#FF0099"
                android:text="@string/title_movie_name" />
            <TextView
                android:id="@+id/choose_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/title_movie_year"
                android:textColor="#FF0099"/>
            <TextView
                android:id="@+id/choose_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#FF0099"
                android:text="@string/title_movie_genre"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FF0099"/>
</LinearLayout>